<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/logo"
    >
<Button android:text="@string/flash" android:id="@+id/flash" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="20sp"></Button>
<Button android:text="@string/reboot_recovery" android:id="@+id/reboot_recovery" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="20sp"></Button>
<Button android:text="@string/reboot_normal" android:id="@+id/reboot_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="20sp"></Button>
<Button android:text="@string/reboot_poweroff" android:id="@+id/reboot_poweroff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="20sp"></Button>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:orientation="vertical"
    android:paddingLeft="6dip"
    android:paddingRight="6dip"
    android:paddingBottom="3dip"
    android:layout_width="fill_parent" android:layout_height="wrap_content" >
     <TextView android:text="@string/about" android:id="@+id/about" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="15sp" android:background="#000000"> </TextView>

<TextView android:text="@string/about_content" android:id="@+id/about_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="14sp" android:autoLink = "all"> </TextView>

</LinearLayout>

</LinearLayout>
